include audio samples for testing

--- a/AudioSampler/InstigatorSampler.csproj
+++ b/AudioSampler/InstigatorSampler.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Echo.cs" />
     <Compile Include="Filter.cs" />
     <Compile Include="FilterStream.cs" />
     <Compile Include="FormSampler.cs">
