refactored & commented code, implemented player object for each pad, attempted player.isPlaying & player.isOutputBuilt but they don't really work, probably due to improper object passing.

--- a/AudioSampler/InstigatorSampler.csproj
+++ b/AudioSampler/InstigatorSampler.csproj
@@ -56,6 +56,7 @@
     <Compile Include="FormSampler.Designer.cs">
       <DependentUpon>FormSampler.cs</DependentUpon>
     </Compile>
+    <Compile Include="Input.cs" />
     <Compile Include="Pad.cs">
       <SubType>Component</SubType>
     </Compile>
