Added Michael's PassFilterStream class, not currenlty incorporated into overall program.

--- a/AudioSampler/InstigatorSampler.csproj
+++ b/AudioSampler/InstigatorSampler.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Pad.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="PassFilterStream.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
